--- a/lfc_disturbance_prediction_lstm.ipynb
+++ b/lfc_disturbance_prediction_lstm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQkGYCsFuZfiQohMOwboSo",
+      "authorship_tag": "ABX9TyOZ7qjrwXlNQBg24BGNQfkH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Import libraries"
+        "# Import libraries"
       ],
       "metadata": {
         "id": "q-oPT7jWHn5Y"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "Vds-93WuHO7B"
       },
@@ -86,7 +86,7 @@
         "id": "0s2z0eDTnjcI",
         "outputId": "11d0da57-ec92-4d8b-fcc2-5bfb527d929b"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -132,7 +132,7 @@
         "id": "Rr_39c9ak6sa",
         "outputId": "cf658a72-6dba-4463-c757-2ba17f30f91b"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -191,7 +191,7 @@
       "metadata": {
         "id": "anRFn2RfMVix"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "RLEaL1LRuqE4"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "vNnJCcZFhL9q"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "Vj8LCEFaFcne"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "id": "SX2pY6RSFfYi",
         "outputId": "1c33bc7c-9d13-4fb2-f377-671059bef0c8"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         "id": "AC_mwPkpYi4G",
         "outputId": "4171d605-b4b6-4516-be53-dd69c4ec0ff6"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -511,9 +511,7 @@
       "source": [
         "for i, (test_input, test_target) in enumerate(test_tensor):\n",
         "    if i ==10:\n",
-        "        print(i, test_input, test_target)\n",
         "        predicted = net(test_input)\n",
-        "        print(predicted)\n",
         "\n",
         "        test_input = test_input.numpy()\n",
         "        test_target = test_target.numpy()\n",
@@ -538,22 +536,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 524
+          "height": 472
         },
         "id": "8CbaSc8SnX-E",
-        "outputId": "a3a0124e-b320-4494-f936-f2a47fac03d3"
+        "outputId": "3b5f8042-b5f7-4459-8d68-97afff3fb83e"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10 tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]) tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
-            "tensor([0.0404, 0.0400, 0.0403, 0.0403, 0.0403, 0.0404, 0.0404, 0.0399, 0.0400,\n",
-            "        0.0407], grad_fn=<ViewBackward0>)\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -595,7 +584,7 @@
         "id": "1lGBxjelV9EJ",
         "outputId": "443586db-00c1-4b2e-f414-03b565b76d46"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
